--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -140,7 +140,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
-        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.workflow }}
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
@@ -160,5 +160,5 @@ jobs:
         keep_latest: 3
         delete_tags: true
       env:
-       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       #GITHUB_TOKEN: ${{ secrets.workflow }}
+#      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       GITHUB_TOKEN: ${{ secrets.workflow }}
